<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    android:padding="25dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/title_registracija"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/login_vardas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_vardas"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPersonName" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/login_elPastas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_elPastas"
        android:inputType="textEmailAddress"
        android:text="El. pastas"
        android:textColor="@color/colorWhite" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/login_slaptazodis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_slaptazodis"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/login_registruotis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:text="@string/login_registruotis"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</LinearLayout>